<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MusicSearchNew</string>
    <string name="search">Search</string>
    <string name="go">go</string>
    <string name="please_wait_search">Searching...</string>
    <string name="search_hit">Type the key words and click \"go\" button to do a search.</string>
    <string name="searching_wait">Please wait while searching:\ </string>
    <string name="network_error_retry">Network error. Please retry.</string>
    <string name="retry">Retry</string>
    <string name="no_result_sorry">Sorry, we didn\'t find any music match the keys words: </string>
    <string name="music_information">Music Information</string>
    <string name="about">About</string>
    <string name="search_more_about">Search More About:\ </string>
    <string name="artist">Artist</string>
    <string name="song">Song</string>
    <string name="album">Album</string>
    <string name="size">Size</string>
    <string name="download_link_list">Download Link List </string>
    <string name="preview">Preview</string>
    <string name="preview_wait">Streaming, press Cancel button to stop.</string>
    <string name="preview_failed">Preview music failed. Please try another link.</string>
    <string name="download">Download</string>
    <string name="loading_download_link">Loading download links. Please wait...</string>
    <string name="load_download_link_failed">Loading download links failed. Please retry later.</string>
    <string name="no_sd">Your device has no sd card or your sd card run out of space</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="play">Play</string>
    <string name="cancel">Cancel</string>
    <string name="streaming">Streaming...</string>
    <string name="show_progress">Show progress</string>
    <string name="loading_downloaded_music">Please wait while loading downloaded musics...</string>
    <string name="load_downloaded_music_failed">Load downloaded musics failed. Please retry again...</string>
    <string name="link_broken">The link is broken, please try another link.</string>
    <string name="library">Library</string>
    <string name="options">Options</string>
    <string name="alert_delet">Are you sure to delect:\ </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="refresh">Refresh</string>
    <string name="sort">Sort</string>
    <string name="downloaded_empty">You have not downloaded any musics yet...</string>
    <string name="sort_by">Sort by</string>
    <string name="make_your_ringtone">Make your own ringtone!</string>
    <string name="edit">Edit</string>
    <string name="edit_intent">Edit</string>
    <string name="toast_download_failed">Download failed: </string>
    <string name="toast_download_finish">Download finish: </string>
    <string name="click_to_view_music">Click here to view the music.</string>
    <string name="music_artist_album">music, artist or album</string>
</resources>
