<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:id="@+id/button_group" 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true">
		<Button
			android:id="@+id/search"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/search">
		</Button>
		<Button
			android:id="@+id/library"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/library">
		</Button>
		<Button
			android:id="@+id/edit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/make_your_ringtone">
		</Button>
	</LinearLayout>
	<ImageView
		android:id="@+id/img_cin"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_above="@id/button_group"
		android:layout_alignParentTop="true"
		android:src="@drawable/cin">
	</ImageView>
</RelativeLayout>

