<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout
		android:id="@+id/button_group"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal">
		<Button
			android:id="@+id/preview_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:enabled="false"
			android:text="@string/preview">
		</Button>
		<Button
			android:id="@+id/download_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:enabled="false"
			android:text="@string/download">
		</Button>
	</LinearLayout>
	
	<LinearLayout
	  	xmlns:android="http://schemas.android.com/apk/res/android"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:orientation="vertical"
	  	android:layout_alignParentTop="true"
	  	android:layout_above="@id/button_group">
		
		<View
			android:layout_height="1dip"
			android:layout_width="wrap_content"
			android:background="#FF909090">
		</View>	
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="#0c212b"
			android:textSize="15sp"
			android:text="@string/music_information">
		</TextView>
		<View
			android:layout_height="1dip"
			android:layout_width="wrap_content"
			android:background="#FF909090">
		</View>	
		<RelativeLayout
			android:id="@+id/music_info"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<LinearLayout
				android:id="@+id/album_size"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:orientation="vertical"
				android:layout_alignParentRight="true"
				android:gravity="right"
				android:paddingRight="5dip">
				<TextView
					android:id="@+id/album"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_vertical"
					android:drawableLeft="@drawable/ic_album"
					android:textSize="15sp">
				</TextView>
				<TextView
					android:id="@+id/size"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_vertical"
					android:textSize="15sp">
				</TextView>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/song_artist"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:orientation="vertical"
				android:layout_alignParentLeft="true"
				android:paddingLeft="5dip">
				<TextView
					android:id="@+id/song"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_vertical"
					android:drawableLeft="@drawable/ic_song"
					android:textSize="15sp">
				</TextView>
				<TextView
					android:id="@+id/artist"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_vertical"
					android:drawableLeft="@drawable/ic_artist"
					android:textSize="15sp">
				</TextView>
			</LinearLayout>
		</RelativeLayout>
		
<!--	<View
			android:layout_height="1dip"
			android:layout_width="wrap_content"
			android:background="#FF909090">
		</View>	
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="10dip"
			android:textSize="8dip"
			android:text="@string/about">
		</TextView>
		<View
			android:layout_height="1dip"
			android:layout_width="wrap_content"
			android:background="#FF909090">
		</View>	
		<ListView
			android:id="@+id/search_more_list"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
		</ListView>
-->
		<View
			android:layout_height="1dip"
			android:layout_width="wrap_content"
			android:background="#FF909090">
		</View>	
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="#0c212b"
			android:textSize="15sp"
			android:text="@string/download_link_list">
		</TextView>
		<View
			android:layout_height="1dip"
			android:layout_width="wrap_content"
			android:background="#FF909090">
		</View>	
		
		<include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/android_list"></include>
	
	</LinearLayout>
</RelativeLayout>